@@ -1,15 +1,15 @@
 package org.apereo.cas.adaptors.x509.authentication.revocation.checker;
 
-
 import lombok.SneakyThrows;
 import lombok.extern.slf4j.Slf4j;
+import lombok.val;
 import net.sf.ehcache.Cache;
 import net.sf.ehcache.Element;
 import org.apereo.cas.adaptors.x509.authentication.CRLFetcher;
 import org.apereo.cas.adaptors.x509.authentication.ResourceCRLFetcher;
 import org.apereo.cas.adaptors.x509.authentication.revocation.policy.RevocationPolicy;
-import org.apereo.cas.util.crypto.CertUtils;
 import org.apereo.cas.util.CollectionUtils;
+import org.apereo.cas.util.crypto.CertUtils;
 import org.bouncycastle.asn1.ASN1Sequence;
 import org.bouncycastle.asn1.DERIA5String;
 import org.bouncycastle.asn1.x509.DistributionPoint;
@@ -109,19 +109,19 @@ public class CRLDistributionPointRevocationChecker extends AbstractCRLRevocation
     @Override
     @SneakyThrows
     protected List<X509CRL> getCRLs(final X509Certificate cert) {
-        final var urls = getDistributionPoints(cert);
+        val urls = getDistributionPoints(cert);
         LOGGER.debug("Distribution points for [{}]: [{}].", CertUtils.toString(cert), CollectionUtils.wrap(urls));
-        final List<X509CRL> listOfLocations = new ArrayList<>(urls.length);
+        val listOfLocations = new ArrayList<X509CRL>(urls.length);
         var stopFetching = false;
-        
+
         for (var index = 0; !stopFetching && index < urls.length; index++) {
-            final var url = urls[index];
-            final var item = this.crlCache.get(url);
+            val url = urls[index];
+            val item = this.crlCache.get(url);
 
             if (item != null) {
                 LOGGER.debug("Found CRL in cache for [{}]", CertUtils.toString(cert));
-                final var encodedCrl = (byte[]) item.getObjectValue();
-                final var crlFetched = this.fetcher.fetch(new ByteArrayResource(encodedCrl));
+                val encodedCrl = (byte[]) item.getObjectValue();
+                val crlFetched = this.fetcher.fetch(new ByteArrayResource(encodedCrl));
 
                 if (crlFetched != null) {
                     listOfLocations.add(crlFetched);
@@ -131,7 +131,7 @@ public class CRLDistributionPointRevocationChecker extends AbstractCRLRevocation
             } else {
                 LOGGER.debug("CRL for [{}] is not cached. Fetching and caching...", CertUtils.toString(cert));
                 try {
-                    final var crl = this.fetcher.fetch(url);
+                    val crl = this.fetcher.fetch(url);
                     if (crl != null) {
                         LOGGER.info("Success. Caching fetched CRL at [{}].", url);
                         addCRL(url, crl);
@@ -163,7 +163,7 @@ public class CRLDistributionPointRevocationChecker extends AbstractCRLRevocation
             LOGGER.debug("No CRL was passed. Removing [{}] from cache...", id);
             return this.crlCache.remove(id);
         }
-        
+
         this.crlCache.put(new Element(id, crl.getEncoded()));
         return this.crlCache.get(id) != null;
 
@@ -177,31 +177,29 @@ public class CRLDistributionPointRevocationChecker extends AbstractCRLRevocation
      * @return the url distribution points
      */
     private static URI[] getDistributionPoints(final X509Certificate cert) {
-        final List<DistributionPoint> points;
         try {
-            points = new ExtensionReader(cert).readCRLDistributionPoints();
+            val points = new ExtensionReader(cert).readCRLDistributionPoints();
+            val urls = new ArrayList<URI>();
+            if (points != null) {
+                points.stream().map(DistributionPoint::getDistributionPoint).filter(Objects::nonNull).forEach(pointName -> {
+                    val nameSequence = ASN1Sequence.getInstance(pointName.getName());
+                    IntStream.range(0, nameSequence.size()).mapToObj(i -> GeneralName.getInstance(nameSequence.getObjectAt(i))).forEach(name -> {
+                        LOGGER.debug("Found CRL distribution point [{}].", name);
+                        try {
+                            addURL(urls, DERIA5String.getInstance(name.getName()).getString());
+                        } catch (final Exception e) {
+                            LOGGER.warn("[{}] not supported. String or GeneralNameList expected.", pointName);
+                        }
+                    });
+                });
+            }
+            return urls.toArray(new URI[0]);
         } catch (final Exception e) {
             LOGGER.error("Error reading CRLDistributionPoints extension field on [{}]", CertUtils.toString(cert), e);
             return new URI[0];
         }
 
-        final List<URI> urls = new ArrayList<>();
 
-        if (points != null) {
-            points.stream().map(DistributionPoint::getDistributionPoint).filter(Objects::nonNull).forEach(pointName -> {
-                final var nameSequence = ASN1Sequence.getInstance(pointName.getName());
-                IntStream.range(0, nameSequence.size()).mapToObj(i -> GeneralName.getInstance(nameSequence.getObjectAt(i))).forEach(name -> {
-                    LOGGER.debug("Found CRL distribution point [{}].", name);
-                    try {
-                        addURL(urls, DERIA5String.getInstance(name.getName()).getString());
-                    } catch (final Exception e) {
-                        LOGGER.warn("[{}] not supported. String or GeneralNameList expected.", pointName);
-                    }
-                });
-            });
-        }
-
-        return urls.toArray(new URI[0]);
     }
 
     /**
@@ -217,18 +215,14 @@ public class CRLDistributionPointRevocationChecker extends AbstractCRLRevocation
      */
     private static void addURL(final List<URI> list, final String uriString) {
         try {
-            URI uri;
             try {
-                final var url = new URL(URLDecoder.decode(uriString, StandardCharsets.UTF_8.name()));
-                uri = new URI(url.getProtocol(), url.getAuthority(), url.getPath(), url.getQuery(), null);
+                val url = new URL(URLDecoder.decode(uriString, StandardCharsets.UTF_8.name()));
+                list.add(new URI(url.getProtocol(), url.getAuthority(), url.getPath(), url.getQuery(), null));
             } catch (final MalformedURLException e) {
-                uri = new URI(uriString);
+                list.add(new URI(uriString));
             }
-            list.add(uri);
         } catch (final Exception e) {
             LOGGER.warn("[{}] is not a valid distribution point URI.", uriString);
         }
     }
-
-
 }
